# Allocator

./: CMakeLists.txt
.github/workflows/: release.yaml
Inc/: custom_allocator.h  hash_table.h  memory_pool.h
Src/: CMakeLists.txt  main.cpp
Test/: CMakeLists.txt  test_custom_allocator.cpp  test_hash_table.cpp  test_memory_pool.cpp
